# boilerplate-multiplatform

./: README.md  update_clients.sh  update_deps.sh
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/boilerplate/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/boilerplate/: MainActivity.kt
android/app/src/main/java/com/example/boilerplate/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: themes.xml
android/app/src/test/java/com/example/boilerplate/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore
ios/Boilerplate/: BoilerplateApp.swift  ContentView.swift
ios/Boilerplate.xcodeproj/: project.pbxproj
macos/Boilerplate/: ContentView.swift
macos/Boilerplate.xcodeproj/: project.pbxproj
macos/BoilerplateTests/: BoilerplateTests.swift
macos/BoilerplateUITests/: BoilerplateUITests.swift  BoilerplateUITestsLaunchTests.swift
rust/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh
rust/crates/boilerplate/: Cargo.toml  README.md  uniffi.toml
rust/crates/boilerplate/src/: lib.rs
rust/crates/server/: Cargo.toml  README.md
rust/crates/test-data/: Cargo.toml  README.md
rust/crates/test-data/src/: lib.rs
rust/crates/test-utils/: Cargo.toml  README.md
rust/crates/test-utils/src/: lib.rs
rust/crates/uniffi-bindgen/: Cargo.toml  README.md
rust/crates/uniffi-bindgen/src/: main.rs
