[package]
name                   = "test-data"
version                = "0.0.1"
description            = "Internal test data"
publish                = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme                 = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#==============================[  DEPENDENCIES  ]===============================

[dependencies]
rubedo             = { workspace = true }
tracing            = { workspace = true }

#=================================[  LINTS  ]===================================

[lints]
workspace = true
