[package]
name                   = "uniffi-bindgen"
version                = "0.0.1"
description            = "FFI bindings generator"
publish                = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
documentation          = ""
readme                 = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#==============================[  DEPENDENCIES  ]===============================

[dependencies]
uniffi             = { workspace = true, features = ["build", "cli"] }

#=================================[  LINTS  ]===================================

[lints]
workspace = true
